# Terra

./: .gitmodules  CMakeLists.txt  README.md  Setup.bat  SetupNoImGui.bat
Win32/includes/: DisplayManagerWin32.hpp  SurfaceManagerWin32.hpp
Win32/src/: DisplayManagerWin32.cpp  SurfaceManagerWin32.cpp
exports/: GraphicsEngine.hpp  IGraphicsEngine.hpp  Renderer.hpp  SUtility.hpp  TerraInstance.hpp
includes/: CameraManager.hpp  GraphicsEngine.hpp  IDisplayManager.hpp  InstanceManager.hpp  Terra.hpp  UploadContainer.hpp
includes/Exceptions/: DebugLayerManager.hpp  VKExceptions.hpp  VKThrowMacros.hpp
includes/VK/: BindInstanceGFX.hpp  BufferManager.hpp  CommandPoolManager.hpp  CommandQueueManager.hpp  CommonPipelineObjects.hpp  ComputePipelineIndirectDraw.hpp  CopyQueueManager.hpp  DebugLayerManager.hpp  DepthBuffer.hpp  DescriptorPool.hpp  DescriptorSetManager.hpp  DeviceManager.hpp  DeviceMemory.hpp  DisplayManagerVK.hpp  FenceWrapper.hpp  GraphicsEngineVK.hpp  GraphicsPipeline.hpp  GraphicsPipelineBase.hpp  GraphicsPipelineIndirectDraw.hpp  GraphicsPipelineMeshShader.hpp  GraphicsPipelineVertexShader.hpp  GraphicsQueueManager.hpp  IBindInstanceGFX.hpp  ICommandPoolManager.hpp  ICommandQueueManager.hpp  ICopyQueueManager.hpp  IDescriptorPool.hpp  IDescriptorSetManager.hpp  IDeviceManager.hpp  IDeviceMemory.hpp  IFenceWrapper.hpp  IGraphicsQueueManager.hpp  IInstanceManager.hpp  IModelContainer.hpp  IPipelineLayout.hpp  IPipelineObject.hpp  IRenderPassManager.hpp  IResourceBuffer.hpp  ISemaphoreWrapper.hpp  IShader.hpp  (+55 more)
includes/VK/Impl/: BindInstanceGFX.hpp  CommandPoolManager.hpp  CommandQueueManager.hpp  CopyQueueManager.hpp  DescriptorPool.hpp  DescriptorSetManager.hpp  DeviceManager.hpp  DeviceMemory.hpp  DisplayManagerVK.hpp  FenceWrapper.hpp  GraphicsEngineVK.hpp  GraphicsQueueManager.hpp  InstanceManager.hpp  ModelContainer.hpp  PipelineLayout.hpp  PipelineObjectGFX.hpp  RenderPassManager.hpp  RendererVK.hpp  ResourceBuffer.hpp  SemaphoreWrapper.hpp  Shader.hpp  SwapChainManager.hpp  SyncObjects.hpp  TextureStorage.hpp  UploadBuffers.hpp  VKInstanceManager.hpp  VertexLayout.hpp  ViewportAndScissorManager.hpp
includes/Win32/: DisplayManagerWin32.hpp  SurfaceManagerWin32.hpp
src/: CameraManager.cpp  Exception.cpp  InstanceManager.cpp  StaticDefinitions.cpp  Terra.cpp  TerraInstance.cpp  UploadContainer.cpp
src/Exceptions/: DebugLayerManager.cpp  Exception.cpp  VKExceptions.cpp
src/VK/: BindInstanceGFX.cpp  BufferManager.cpp  CameraManager.cpp  CommandPoolManager.cpp  CommandQueueManager.cpp  CommonPipelineObjects.cpp  ComputePipelineIndirectDraw.cpp  CopyQueueManager.cpp  DebugLayerManager.cpp  DepthBuffer.cpp  DescriptorPool.cpp  DescriptorSetManager.cpp  DeviceManager.cpp  DeviceMemory.cpp  DisplayManagerVK.cpp  FenceWrapper.cpp  GraphicsEngineVK.cpp  GraphicsPipeline.cpp  GraphicsPipelineBase.cpp  GraphicsPipelineIndirectDraw.cpp  GraphicsPipelineMeshShader.cpp  GraphicsPipelineVertexShader.cpp  GraphicsQueueManager.cpp  InstanceManager.cpp  ModelContainer.cpp  ModelManager.cpp  ModelSet.cpp  ObjectCreationFunctions.cpp  PerFrameBuffers.cpp  PipelineConstructor.cpp  PipelineLayout.cpp  PipelineObjectGFX.cpp  RenderEngine.cpp  RenderEngineBase.cpp  RenderEngineIndirectDraw.cpp  RenderEngineMeshShader.cpp  RenderEngineVertexShader.cpp  RenderPassManager.cpp  RenderPipeline.cpp  RenderPipelineIndirectDraw.cpp  (+30 more)
src/Win32/: DisplayManagerWin32.cpp  SurfaceManagerWin32.cpp
templates/: Exception.hpp  IModel.hpp  IThreadPool.hpp
test/: CMakeLists.txt
test/Win32/: SimpleWindow.cpp  SimpleWindow.hpp
test/src/: AllocatorTest.cc  BufferTest.cc  CommandQueueTest.cc  CommonBufferTest.cc  DescriptorBufferTest.cc  ExternalResourceTest.cc  ModelManagerTest.cc  RenderEngineTest.cc  SharedPtrVectorTest.cc  StagingBufferManagerTest.cc  SwapchainTest.cc  VkSharedBufferTest.cc
